// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extendedImage > rendering > compile > %p HTML: multiple style props 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><img src="/assets/image.png" alt="alt text" style="width:50%;max-height:400px;opacity:0.8;"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p HTML: no alt 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><img src="/assets/image.png" style="width:50%;"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p HTML: single style prop 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><img src="/assets/image.png" alt="alt text" style="width:50%;"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_DENDRON: multiple style props 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png){width: 50%, max-height: 400px, opacity: 0.8}

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_DENDRON: no alt 1`] = `
VFile {
  "contents": "# Root

![](/assets/image.png){width: 50%}

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_DENDRON: single style prop 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png){width: 50%}

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_REGULAR: multiple style props 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_REGULAR: no alt 1`] = `
VFile {
  "contents": "# Root

![](/assets/image.png)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`extendedImage > rendering > compile > %p MD_REGULAR: single style prop 1`] = `
VFile {
  "contents": "# Root

![alt text](/assets/image.png)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;
